# ClimuCore

./: .clang-format  CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.53B785A99388FEF6.idx  _vectorize.hpp.CDBF6684FBB20853.idx  common.hpp.CF078A4CBDB61758.idx  compute_common.hpp.F4DB7FB0138A7541.idx  compute_vector_relational.hpp.236675585AA46F8A.idx  constants.hpp.D3F96CC8DBF0DCFB.idx  constants.inl.1DEA85D7C3CD6BFC.idx  epsilon.hpp.6A4860A2F6262D29.idx  epsilon.inl.CC857C098BCA2EF6.idx  exponential.hpp.581CFD0EE28DC721.idx  func_common.inl.BEB4A54923C00681.idx  func_exponential.inl.E3E90F815E8F955A.idx  func_geometric.inl.9E30415EAC062B8F.idx  func_integer.inl.EEEB6EE96F806E6F.idx  func_matrix.inl.B648DEF7FB7DF816.idx  func_packing.inl.960AD3F802F1099C.idx  func_trigonometric.inl.EB47C65F0E4D3CEE.idx  func_vector_relational.inl.02F3A27176EF992A.idx  fwd.hpp.74D7F2D4A2ABBF6A.idx  geometric.hpp.9E5B58821C3ED0C7.idx  glad.c.1B00CAC53CD7B676.idx  glm.hpp.8A1AFD30A6750A1D.idx  imconfig.h.4EED1F401B392FA2.idx  imconfig.h.966D3721E95767CD.idx  imgui.cpp.C58790CED0A8EDF9.idx  imgui.h.630EA8F2019EBDA2.idx  imgui.h.E0902BB0266AAD2A.idx  imgui_demo.cpp.A75BD8213B9ABEEC.idx  imgui_draw.cpp.D8F30088EF6EB7BF.idx  imgui_impl_glfw.cpp.7B86B117CAEF2821.idx  imgui_impl_glfw.h.0C785BF96C3EB50A.idx  imgui_impl_glfw.h.599055D7FBA2E83D.idx  imgui_impl_opengl3.cpp.4A487BB314CC027D.idx  imgui_impl_opengl3.h.5DE9FDAA4231CA92.idx  (+179 more)
includes/: shader_s.h  stb_image.h
includes/utils/: log_utils.h
src/: glad.c  main.cpp
src/shaders/: shaders.cpp
src/utils/: log_utils.cpp
(+3 files in other folders)
